[gd_scene load_steps=13 format=2]

[ext_resource path="res://dialog_creator.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 24.0
content_margin_bottom = 5.0
bg_color = Color( 0.396078, 0.494118, 0.243137, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFontData" id=10]
font_path = "res://notalot35.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 10 )

[sub_resource type="GDScript" id=3]
script/source = "extends LineEdit

signal focus_changed(idx)

func _init():
	connect(\"focus_exited\", self, \"_on_action_text_focus_exited\")

func _on_action_text_focus_exited():
	emit_signal(\"focus_changed\", get_parent().get_index())"

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 24.0
content_margin_bottom = 5.0
bg_color = Color( 0.490196, 0.490196, 0.490196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="GDScript" id=5]
script/source = "extends TextEdit

signal focus_changed(idx)

func _init():
	connect(\"focus_exited\", self, \"_on_action_text_focus_exited\")

func _on_action_text_focus_exited():
	emit_signal(\"focus_changed\", get_parent().get_index())"

[sub_resource type="GDScript" id=6]
script/source = "extends MenuButton

func _init():
	var p = self.get_popup()
	p.add_item(\"bold\")
	p.add_item(\"italics\")
	p.add_item(\"underline\")
	p.add_item(\"strikethrough\")
	p.add_item(\"code\")
	p.add_item(\"center\")
	p.add_item(\"right\")
	p.add_item(\"fill\")
	p.add_item(\"indent\")
	p.add_item(\"url\")
	p.add_item(\"url (ref)\")
	p.add_item(\"image\")
	p.add_item(\"font\")
	p.add_item(\"color\")
	p.connect(\"id_pressed\", self, \"on_file_item_pressed\")

func on_file_item_pressed(id):
	match id:
		0: $\"../text\".set_text($\"../text\".get_text() + \"[b]{text}[/b]\")
		1: $\"../text\".set_text($\"../text\".get_text() + \"[i]{text}[/i]\")
		2: $\"../text\".set_text($\"../text\".get_text() + \"[u]{text}[/u]\")
		3: $\"../text\".set_text($\"../text\".get_text() + \"[s]{text}[/s]\")
		4: $\"../text\".set_text($\"../text\".get_text() + \"[code]{text}[/code]\")
		5: $\"../text\".set_text($\"../text\".get_text() + \"[center]{text}[/center]\")
		6: $\"../text\".set_text($\"../text\".get_text() + \"[right]{text}[/right]\")
		7: $\"../text\".set_text($\"../text\".get_text() + \"[fill]{text}[/fill]\")
		8: $\"../text\".set_text($\"../text\".get_text() + \"[indent]{text}[/indent]\")
		9: $\"../text\".set_text($\"../text\".get_text() + \"[url]{url}[/url]\")
		10: $\"../text\".set_text($\"../text\".get_text() + \"[url=<url>]{text}[/url]\")
		11: $\"../text\".set_text($\"../text\".get_text() + \"[img]{path}[/img]\")
		12: $\"../text\".set_text($\"../text\".get_text() + \"[font=<path>]{text}[/font]\")
		13: $\"../text\".set_text($\"../text\".get_text() + \"[color=<code/name>]{text}[/color]\")"

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 24.0
content_margin_bottom = 5.0
bg_color = Color( 0.243137, 0.490196, 0.494118, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 24.0
content_margin_bottom = 5.0
bg_color = Color( 0.231373, 0.419608, 0.643137, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="GDScript" id=9]
script/source = "extends ConfirmationDialog

signal accepted(text)

func _on_RenameDialog_confirmed():
	emit_signal(\"accepted\", $text.text)
"

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="actions" type="Control" parent="."]
editor/display_folded = true
visible = false
mouse_filter = 2

[node name="Header" type="GraphNode" parent="actions"]
editor/display_folded = true
margin_top = -247.0
margin_right = 296.0
margin_bottom = -171.0
size_flags_horizontal = 3
custom_styles/frame = SubResource( 1 )
title = "ACTIONLIST_HEADER"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )

[node name="_header" type="Label" parent="actions/Header"]
margin_left = 12.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 38.0
text = "ACTIONLIST_HEADER_DESC"

[node name="text" type="LineEdit" parent="actions/Header"]
margin_left = 12.0
margin_top = 38.0
margin_right = 284.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
max_length = 64
caret_blink = true
script = SubResource( 3 )

[node name="Text" type="GraphNode" parent="actions"]
editor/display_folded = true
margin_left = 296.0
margin_top = -247.0
margin_right = 592.0
margin_bottom = -6.0
size_flags_horizontal = 3
custom_styles/frame = SubResource( 4 )
title = "ACTIONLIST_TEXT"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )

[node name="_text" type="Label" parent="actions/Text"]
margin_left = 12.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 38.0
text = "ACTIONLIST_TEXT_DESC"

[node name="text" type="TextEdit" parent="actions/Text"]
margin_left = 12.0
margin_top = 38.0
margin_right = 284.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 176 )
custom_fonts/font = SubResource( 2 )
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
script = SubResource( 5 )

[node name="add_bbcode" type="MenuButton" parent="actions/Text"]
margin_left = 12.0
margin_top = 215.0
margin_right = 284.0
margin_bottom = 235.0
text = "ACTIONLIST_ADDSTYLE"
flat = false
script = SubResource( 6 )

[node name="SetCharacters" type="GraphNode" parent="actions"]
editor/display_folded = true
margin_left = 592.0
margin_top = -247.0
margin_right = 888.0
margin_bottom = -108.0
size_flags_horizontal = 3
custom_styles/frame = SubResource( 7 )
title = "ACTIONLIST_SETCHARACTERS"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )

[node name="_setcharacters" type="Label" parent="actions/SetCharacters"]
margin_left = 12.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 38.0
text = "ACTIONLIST_SETCHARACTERS_DESC0"

[node name="l" type="HBoxContainer" parent="actions/SetCharacters"]
margin_left = 12.0
margin_top = 38.0
margin_right = 284.0
margin_bottom = 62.0

[node name="char" type="LineEdit" parent="actions/SetCharacters/l"]
margin_right = 134.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 64
caret_blink = true

[node name="exp" type="LineEdit" parent="actions/SetCharacters/l"]
margin_left = 138.0
margin_right = 272.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 64
caret_blink = true

[node name="desc3" type="Label" parent="actions/SetCharacters"]
margin_left = 12.0
margin_top = 63.0
margin_right = 284.0
margin_bottom = 77.0
text = "ACTIONLIST_SETCHARACTERS_DESC1"

[node name="r" type="HBoxContainer" parent="actions/SetCharacters"]
editor/display_folded = true
margin_left = 12.0
margin_top = 78.0
margin_right = 284.0
margin_bottom = 102.0

[node name="char" type="LineEdit" parent="actions/SetCharacters/r"]
margin_right = 134.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 64
caret_blink = true

[node name="exp" type="LineEdit" parent="actions/SetCharacters/r"]
margin_left = 138.0
margin_right = 272.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 64
caret_blink = true

[node name="Expression" type="GraphNode" parent="actions"]
editor/display_folded = true
margin_left = 888.0
margin_top = -247.0
margin_right = 1184.0
margin_bottom = -164.0
size_flags_horizontal = 3
custom_styles/frame = SubResource( 8 )
title = "ACTIONLIST_SETEXPRESSION"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )

[node name="_setexpression" type="Label" parent="actions/Expression"]
margin_left = 12.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 38.0
text = "ACTIONLIST_SETEXPRESSION_DESC"

[node name="l" type="HBoxContainer" parent="actions/Expression"]
margin_left = 12.0
margin_top = 38.0
margin_right = 284.0
margin_bottom = 62.0

[node name="char" type="LineEdit" parent="actions/Expression/l"]
margin_right = 134.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 64
caret_blink = true

[node name="exp" type="LineEdit" parent="actions/Expression/l"]
margin_left = 138.0
margin_right = 272.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 64
caret_blink = true

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 360.0
margin_bottom = 288.0
window_title = "Datei öffnen"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "d:/Malte/Documents/Projekte/GitHub/Yet Another Dialog Editor"
current_path = "d:/Malte/Documents/Projekte/GitHub/Yet Another Dialog Editor/"

[node name="SaveDialogAs" type="FileDialog" parent="."]
margin_right = 360.0
margin_bottom = 288.0
popup_exclusive = true
resizable = true
access = 2
filters = PoolStringArray( "*.json" )
show_hidden_files = false
current_dir = "d:/Malte/Documents/Projekte/GitHub/Sally's Question Corner"
current_path = "d:/Malte/Documents/Projekte/GitHub/Sally's Question Corner/"

[node name="RenameDialog" type="ConfirmationDialog" parent="."]
editor/display_folded = true
margin_right = 308.0
margin_bottom = 70.0
window_title = "Konversation umbenennen,,,"
resizable = true
script = SubResource( 9 )

[node name="text" type="LineEdit" parent="RenameDialog"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 34.0

[node name="Navbar" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 40.0
custom_constants/separation = 8

[node name="File" type="MenuButton" parent="Navbar"]
margin_right = 83.0
margin_bottom = 32.0
text = "MENU_FILE"
switch_on_hover = true

[node name="Help" type="MenuButton" parent="Navbar"]
margin_left = 91.0
margin_right = 180.0
margin_bottom = 32.0
text = "MENU_HELP"
switch_on_hover = true

[node name="Path" type="Label" parent="Navbar"]
margin_left = 188.0
margin_top = 9.0
margin_right = 188.0
margin_bottom = 23.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 48.0
margin_right = -8.0
margin_bottom = -8.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1008.0
margin_bottom = 544.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 201.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="btnbar" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 201.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/btnbar"]
margin_top = 3.0
margin_right = 129.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "UI_CONVERSATIONS"

[node name="add" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/btnbar"]
margin_left = 133.0
margin_right = 153.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "+"

[node name="del" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/btnbar"]
margin_left = 157.0
margin_right = 177.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "-"

[node name="rename" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/btnbar"]
margin_left = 181.0
margin_right = 201.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "I"

[node name="Conversations" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 201.0
margin_bottom = 544.0
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 205.0
margin_right = 209.0
margin_bottom = 544.0
mouse_default_cursor_shape = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 213.0
margin_right = 604.0
margin_bottom = 544.0
size_flags_horizontal = 3

[node name="btnbar" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 391.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/btnbar"]
margin_top = 3.0
margin_right = 295.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "UI_ELEMENTS"

[node name="add" type="MenuButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/btnbar"]
margin_left = 299.0
margin_right = 319.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "+"
flat = false
switch_on_hover = true

[node name="del" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/btnbar"]
margin_left = 323.0
margin_right = 343.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "-"

[node name="move_up" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/btnbar"]
margin_left = 347.0
margin_right = 367.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "^"

[node name="move_down" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/btnbar"]
margin_left = 371.0
margin_right = 391.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "v"

[node name="Elements" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 391.0
margin_bottom = 544.0
size_flags_vertical = 3
select_mode = 1

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 608.0
margin_right = 612.0
margin_bottom = 544.0
mouse_default_cursor_shape = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 616.0
margin_right = 1008.0
margin_bottom = 544.0
rect_min_size = Vector2( 308, 0 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ScrollContainer"]
margin_right = 392.0
size_flags_horizontal = 3

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 230.0
margin_top = 165.0
margin_right = 800.0
margin_bottom = 421.0
window_title = "MENU_HELP_ABOUT"

[node name="TextureRect" type="TextureRect" parent="WindowDialog"]
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -314.0
margin_top = 45.0
margin_bottom = 195.0

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog/VBoxContainer"]
margin_right = 314.0
margin_bottom = 150.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Yet Another Dialog Editor

0.1 (release)
Powered by Godot Engine 3.1.1
[url=]{text}[/url]"
text = "Yet Another Dialog Editor

0.1 (release)
Powered by Godot Engine 3.1.1
{text}"
scroll_active = false
[connection signal="focus_changed" from="actions/Header/text" to="." method="_on_action_header_focus_changed"]
[connection signal="focus_changed" from="actions/Text/text" to="." method="_on_action_text_focus_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="SaveDialogAs" to="." method="_on_SaveDialogAs_file_selected"]
[connection signal="accepted" from="RenameDialog" to="." method="_on_RenameDialog_accepted"]
[connection signal="confirmed" from="RenameDialog" to="RenameDialog" method="_on_RenameDialog_confirmed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnbar/add" to="." method="_on_conversations_add_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnbar/del" to="." method="_on_conversations_del_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnbar/rename" to="." method="_on_conversations_rename_pressed"]
[connection signal="item_activated" from="MarginContainer/HBoxContainer/VBoxContainer/Conversations" to="." method="_on_Conversations_item_activated"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/Conversations" to="." method="_on_Conversations_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/btnbar/del" to="." method="_on_elements_del_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/btnbar/move_up" to="." method="_on_elements_move_up_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/btnbar/move_down" to="." method="_on_elements_move_down_pressed"]
